--- a/RomanNumeralCalculator/Base.lproj/Main.storyboard
+++ b/RomanNumeralCalculator/Base.lproj/Main.storyboard
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Helvetica.ttc">
+            <string>Helvetica-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -64,7 +69,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3q-3h-gaZ">
-                                                <rect key="frame" x="207.00000000000003" y="0.0" width="103.66666666666671" height="118"/>
+                                                <rect key="frame" x="206.99999999999997" y="0.0" width="103.66666666666666" height="118"/>
                                                 <color key="backgroundColor" red="0.98563617467880249" green="0.0" blue="0.47214984893798828" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="92"/>
                                                 <state key="normal" title="X"/>
@@ -73,7 +78,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfY-gC-FPP">
-                                                <rect key="frame" x="310.66666666666674" y="0.0" width="103.33333333333331" height="118"/>
+                                                <rect key="frame" x="310.66666666666669" y="0.0" width="103.33333333333331" height="118"/>
                                                 <color key="backgroundColor" red="0.11037313938140869" green="0.67799139022827148" blue="0.75475978851318359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="92"/>
                                                 <inset key="contentEdgeInsets" minX="0.0" minY="-15" maxX="0.0" maxY="0.0"/>
@@ -106,7 +111,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQS-9t-wGV">
-                                                <rect key="frame" x="207.00000000000003" y="0.0" width="103.66666666666671" height="118"/>
+                                                <rect key="frame" x="206.99999999999997" y="0.0" width="103.66666666666666" height="118"/>
                                                 <color key="backgroundColor" red="0.98563617467880249" green="0.0" blue="0.47214984893798828" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="92"/>
                                                 <state key="normal" title="D"/>
@@ -115,7 +120,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a5F-2R-iNU">
-                                                <rect key="frame" x="310.66666666666674" y="0.0" width="103.33333333333331" height="118"/>
+                                                <rect key="frame" x="310.66666666666669" y="0.0" width="103.33333333333331" height="118"/>
                                                 <color key="backgroundColor" red="0.11037313938140869" green="0.67799139022827148" blue="0.75475978851318359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="92"/>
                                                 <inset key="contentEdgeInsets" minX="0.0" minY="-15" maxX="0.0" maxY="0.0"/>
@@ -139,7 +144,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDp-wd-HSs">
-                                                <rect key="frame" x="310.66666666666674" y="0.0" width="103.33333333333331" height="118"/>
+                                                <rect key="frame" x="310.66666666666669" y="0.0" width="103.33333333333331" height="118"/>
                                                 <color key="backgroundColor" red="0.92549019607843142" green="0.71372549019607845" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="18"/>
                                                 <state key="normal" title="Clear"/>
